Initial commit - Student Portal

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
     {% load static %}
     {% load tailwind_tags %}
     {% tailwind_css %}
-    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=DM+Sans:wght@400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <style>
         body { font-family: 'DM Sans', sans-serif; }
         h1, h2, h3, .brand { font-family: 'DM Serif Display', serif; }
